--- a/languages/pt-PT/economy/work.json
+++ b/languages/pt-PT/economy/work.json
@@ -3,9 +3,12 @@
     "USAGE": "{{prefix}}work",
     "EXAMPLES": "{{prefix}}work",
     "COOLDOWN": "You have to wait {{time}} before working again!",
-    "AWARD": "Complete a palavra AWARD para ganhar 200 créditos de bônus!",
+    "AWARD": "Complete a palavra AWARD para ganhar 500 créditos de bônus!",
     "SALARY": "Salário",
     "SALARY_CONTENT": "You've gained {{won}} credits!",
     "STREAK": "À risca",
-    "STREAK_CONTENT": "🎉 You've won 200 bonus credits!"
+    "STREAK_CONTENT": "🎉 You've won 500 bonus credits!",
+    "STREAK_LOST": "Você não trabalhou por um dia, você perdeu sua seqüência.",
+    "WORK_MESSAGE": "To get your work done, you need to say the letters in the image below.",
+    "WORK_FAIL": "Bad job `{{tag}}`. You've failed your task. You lost your work streak and you've been given {{amount}} for today's work."
 }
