--- a/languages/fr-FR/economy/work.json
+++ b/languages/fr-FR/economy/work.json
@@ -3,9 +3,12 @@
     "USAGE": "{{prefix}}work",
     "EXAMPLES": "{{prefix}}work",
     "COOLDOWN": "You have to wait {{time}} before working again!",
-    "AWARD": "Compléter le mot AWARD pour gagner 200 crédits bonus !",
+    "AWARD": "Compléter le mot AWARD pour gagner 500 crédits bonus !",
     "SALARY": "Salaire",
     "SALARY_CONTENT": "You've gained {{won}} credits!",
     "STREAK": "Série",
-    "STREAK_CONTENT": "🎉 You've won 200 bonus credits!"
+    "STREAK_CONTENT": "🎉 You've won 500 bonus credits!",
+    "STREAK_LOST": "You didn't work for a day, you've lost your work streak.",
+    "WORK_MESSAGE": "To get your work done, you need to say the letters in the image below.",
+    "WORK_FAIL": "Bad job `{{tag}}`. You've failed your task. You lost your work streak and you've been given {{amount}} for today's work."
 }
