--- a/languages/es-ES/economy/profile.json
+++ b/languages/es-ES/economy/profile.json
@@ -1,25 +1,27 @@
 {
     "DESCRIPTION": "Shows the mentioned user or author profile",
-    "USAGE": "{{prefix}}profile [usuario]",
+    "USAGE": "{{prefix}}profile [user]",
     "EXAMPLES": "{{prefix}}profile Androz#2091",
     "TITLE": "{{username}}'s profile",
     "NO_BIO": "",
     "BOT_USER": "Bots don't have profile page!",
-    "CASH": "💵 Dinero",
-    "BANK": "💳 Banco",
-    "NET_WORTH": "🌍 Valor neto",
+    "CASH": "💵 Cash",
+    "BANK": "💳 Bank",
+    "NET_WORTH": "🌍 Net Worth",
     "MONEY": "**{{cLogo}}{{money}}**",
-    "REPUTATION": "🎩 Reputación",
-    "REP_POINTS": "**{{points}}** punto(s)",
-    "LEVEL": "📊 Nivel",
+    "REPUTATION": "🎩 Reputation",
+    "REP_POINTS": "**{{points}}** point(s)",
+    "LEVEL": "📊 Level",
     "EXP": "🔮 Experience",
-    "BIRTHDATE": "🎂 Cumpleaños",
-    "NO_BIRTHDATE": "No hay fecha de nacimiento disponible",
+    "BIRTHDATE": "🎂 Birthdate",
+    "NO_BIRTHDATE": "No birthdate available",
     "LOVER": "❤ Lover",
-    "REGISTERED": "📅 Registro",
-    "NO_LOVER": "Soltero",
+    "REGISTERED": "📅 Registered",
+    "NO_LOVER": "Single",
     "ACHIEVEMENTS": "🔥 Achievements",
-    "ACHIEVEMENTS_CONTENT": "¡Obtenga más información con `{{prefix}}achievements`!",
-    "BIO": "🔖 Biografía",
-    "YOUR_PROFILE": "Su Perfil"
+    "ACHIEVEMENTS_CONTENT": "Get more information with `{{prefix}}achievements`!",
+    "BIO": "🔖 Biography",
+    "YOUR_PROFILE": "Your profile",
+    "LOCATION": "🧭 Current Location",
+    "CURRENT_LOCATION": "You are currently at **{{location}}**"
 }
