--- a/languages/it-IT/economy/profile.json
+++ b/languages/it-IT/economy/profile.json
@@ -1,25 +1,27 @@
 {
-    "DESCRIPTION": "Mostra il profilo dell'utente menzionato o dell'autore",
-    "USAGE": "{{prefix}}profile [utente]",
+    "DESCRIPTION": "Shows the mentioned user or author profile",
+    "USAGE": "{{prefix}}profile [user]",
     "EXAMPLES": "{{prefix}}profile Androz#2091",
-    "TITLE": "Profilo di {{username}}",
+    "TITLE": "{{username}}'s profile",
     "NO_BIO": "",
-    "BOT_USER": "I bot non hanno una pagina profilo!",
-    "CASH": "💵 Denaro",
-    "BANK": "💳 Banca",
-    "NET_WORTH": "🌍 Patrimonio Netto",
+    "BOT_USER": "Bots don't have profile page!",
+    "CASH": "💵 Cash",
+    "BANK": "💳 Bank",
+    "NET_WORTH": "🌍 Net Worth",
     "MONEY": "**{{cLogo}}{{money}}**",
-    "REPUTATION": "🎩 Reputazione",
-    "REP_POINTS": "**{{points}}** punti",
-    "LEVEL": "📊 Livello",
-    "EXP": "🔮 Esperienza",
-    "BIRTHDATE": "🎂 Compleanno",
-    "NO_BIRTHDATE": "Nessuna data di nascita disponibile",
-    "LOVER": "❤ Amante",
-    "REGISTERED": "📅 Registrato",
+    "REPUTATION": "🎩 Reputation",
+    "REP_POINTS": "**{{points}}** point(s)",
+    "LEVEL": "📊 Level",
+    "EXP": "🔮 Experience",
+    "BIRTHDATE": "🎂 Birthdate",
+    "NO_BIRTHDATE": "No birthdate available",
+    "LOVER": "❤ Lover",
+    "REGISTERED": "📅 Registered",
     "NO_LOVER": "Single",
-    "ACHIEVEMENTS": "🔥 Ricompense",
-    "ACHIEVEMENTS_CONTENT": "Ottieni maggiori informazioni con `{{prefix}}achievements`!",
-    "BIO": "🔖 Biografia",
-    "YOUR_PROFILE": "Il tuo profilo"
+    "ACHIEVEMENTS": "🔥 Achievements",
+    "ACHIEVEMENTS_CONTENT": "Get more information with `{{prefix}}achievements`!",
+    "BIO": "🔖 Biography",
+    "YOUR_PROFILE": "Your profile",
+    "LOCATION": "🧭 Current Location",
+    "CURRENT_LOCATION": "You are currently at **{{location}}**"
 }
