--- a/languages/nl-NL/economy/profile.json
+++ b/languages/nl-NL/economy/profile.json
@@ -5,21 +5,23 @@
     "TITLE": "{{username}}'s profile",
     "NO_BIO": "",
     "BOT_USER": "Bots don't have profile page!",
-    "CASH": "💵 Contant",
+    "CASH": "💵 Cash",
     "BANK": "💳 Bank",
-    "NET_WORTH": "🌍 Netto waarde",
+    "NET_WORTH": "🌍 Net Worth",
     "MONEY": "**{{cLogo}}{{money}}**",
     "REPUTATION": "🎩 Reputation",
-    "REP_POINTS": "**{{points}}** punt(en)",
+    "REP_POINTS": "**{{points}}** point(s)",
     "LEVEL": "📊 Level",
-    "EXP": "🔮 Expérience",
-    "BIRTHDATE": "🎂 Geboortedatum",
-    "NO_BIRTHDATE": "Geen geboortedatum beschikbaar",
+    "EXP": "🔮 Experience",
+    "BIRTHDATE": "🎂 Birthdate",
+    "NO_BIRTHDATE": "No birthdate available",
     "LOVER": "❤ Lover",
-    "REGISTERED": "📅 Geregistreerd",
+    "REGISTERED": "📅 Registered",
     "NO_LOVER": "Single",
-    "ACHIEVEMENTS": "🔥 Réalisations",
-    "ACHIEVEMENTS_CONTENT": "Krijg meer informatie met `{{prefix}}achievements`!",
-    "BIO": "🔖 Biografie",
-    "YOUR_PROFILE": "Your profile"
+    "ACHIEVEMENTS": "🔥 Achievements",
+    "ACHIEVEMENTS_CONTENT": "Get more information with `{{prefix}}achievements`!",
+    "BIO": "🔖 Biography",
+    "YOUR_PROFILE": "Your profile",
+    "LOCATION": "🧭 Current Location",
+    "CURRENT_LOCATION": "You are currently at **{{location}}**"
 }
