--- a/languages/pt-PT/economy/profile.json
+++ b/languages/pt-PT/economy/profile.json
@@ -5,21 +5,23 @@
     "TITLE": "{{username}}'s profile",
     "NO_BIO": "",
     "BOT_USER": "Bots don't have profile page!",
-    "CASH": "💵 Dinheiro",
-    "BANK": "💳 Banco",
-    "NET_WORTH": "🌍 Patrimônio líquido",
+    "CASH": "💵 Cash",
+    "BANK": "💳 Bank",
+    "NET_WORTH": "🌍 Net Worth",
     "MONEY": "**{{cLogo}}{{money}}**",
-    "REPUTATION": "🎩 Reputação",
-    "REP_POINTS": "**{{points}}** pontos",
+    "REPUTATION": "🎩 Reputation",
+    "REP_POINTS": "**{{points}}** point(s)",
     "LEVEL": "📊 Level",
-    "EXP": "🔮 Experiência",
-    "BIRTHDATE": "🎂 Data de nascimento",
-    "NO_BIRTHDATE": "Nenhuma data de nascimento disponível",
+    "EXP": "🔮 Experience",
+    "BIRTHDATE": "🎂 Birthdate",
+    "NO_BIRTHDATE": "No birthdate available",
     "LOVER": "❤ Lover",
-    "REGISTERED": "📅 Registrado (a)",
-    "NO_LOVER": "Solteiro (a)",
-    "ACHIEVEMENTS": "🔥 Conquistas",
-    "ACHIEVEMENTS_CONTENT": "Obtenha mais informações com `{{prefix}}achievements`!",
-    "BIO": "🔖 Biografia",
-    "YOUR_PROFILE": "Seu perfil"
+    "REGISTERED": "📅 Registered",
+    "NO_LOVER": "Single",
+    "ACHIEVEMENTS": "🔥 Achievements",
+    "ACHIEVEMENTS_CONTENT": "Get more information with `{{prefix}}achievements`!",
+    "BIO": "🔖 Biography",
+    "YOUR_PROFILE": "Your profile",
+    "LOCATION": "🧭 Current Location",
+    "CURRENT_LOCATION": "You are currently at **{{location}}**"
 }
