--- a/languages/fr-FR/economy/profile.json
+++ b/languages/fr-FR/economy/profile.json
@@ -1,25 +1,27 @@
 {
     "DESCRIPTION": "Shows the mentioned user or author profile",
-    "USAGE": "{{prefix}}profile [utilisateur]",
+    "USAGE": "{{prefix}}profile [user]",
     "EXAMPLES": "{{prefix}}profile Androz#2091",
     "TITLE": "{{username}}'s profile",
     "NO_BIO": "",
     "BOT_USER": "Bots don't have profile page!",
     "CASH": "💵 Cash",
-    "BANK": "💳 Banque",
-    "NET_WORTH": "🌍 Valeur nette",
+    "BANK": "💳 Bank",
+    "NET_WORTH": "🌍 Net Worth",
     "MONEY": "**{{cLogo}}{{money}}**",
-    "REPUTATION": "🎩 Réputation",
+    "REPUTATION": "🎩 Reputation",
     "REP_POINTS": "**{{points}}** point(s)",
-    "LEVEL": "📊 Niveau",
-    "EXP": "🔮 Expérience",
-    "BIRTHDATE": "🎂 Anniversaire",
-    "NO_BIRTHDATE": "Pas d'anniversaire disponible",
+    "LEVEL": "📊 Level",
+    "EXP": "🔮 Experience",
+    "BIRTHDATE": "🎂 Birthdate",
+    "NO_BIRTHDATE": "No birthdate available",
     "LOVER": "❤ Lover",
-    "REGISTERED": "📅 Enregistré",
-    "NO_LOVER": "Célibataire",
-    "ACHIEVEMENTS": "🔥 Succès",
-    "ACHIEVEMENTS_CONTENT": "Obtenez plus d'informations avec `{{prefix}}achievements` !",
-    "BIO": "🔖 Biographie",
-    "YOUR_PROFILE": "Votre profil"
+    "REGISTERED": "📅 Registered",
+    "NO_LOVER": "Single",
+    "ACHIEVEMENTS": "🔥 Achievements",
+    "ACHIEVEMENTS_CONTENT": "Get more information with `{{prefix}}achievements`!",
+    "BIO": "🔖 Biography",
+    "YOUR_PROFILE": "Your profile",
+    "LOCATION": "🧭 Current Location",
+    "CURRENT_LOCATION": "You are currently at **{{location}}**"
 }
