--- a/languages/hu-HU/economy/profile.json
+++ b/languages/hu-HU/economy/profile.json
@@ -1,25 +1,27 @@
 {
-    "DESCRIPTION": "Az említett felhasználó vagy szerző profil megtekintése",
-    "USAGE": "{{prefix}}profile [felhasználó]",
+    "DESCRIPTION": "Shows the mentioned user or author profile",
+    "USAGE": "{{prefix}}profile [user]",
     "EXAMPLES": "{{prefix}}profile Androz#2091",
-    "TITLE": "{{username}} profilja",
+    "TITLE": "{{username}}'s profile",
     "NO_BIO": "",
-    "BOT_USER": "A botnak nincs profil oldala!",
-    "CASH": "💵 Készpénz",
+    "BOT_USER": "Bots don't have profile page!",
+    "CASH": "💵 Cash",
     "BANK": "💳 Bank",
-    "NET_WORTH": "🌍 Nettó érték",
+    "NET_WORTH": "🌍 Net Worth",
     "MONEY": "**{{cLogo}}{{money}}**",
-    "REPUTATION": "🎩 Hírnév",
-    "REP_POINTS": "**{{points}}** pont",
-    "LEVEL": "📊 Szint",
-    "EXP": "🔮 Tapasztalat",
-    "BIRTHDATE": "🎂 Születésnap",
-    "NO_BIRTHDATE": "Nem áll rendelkezésre születési dátum",
-    "LOVER": "❤ Szerető",
-    "REGISTERED": "📅 Regisztrálva",
-    "NO_LOVER": "Egyetlen",
-    "ACHIEVEMENTS": "🔥 Eredmények",
-    "ACHIEVEMENTS_CONTENT": "További információért írd be a `{{prefix}}achievements` parancsot!",
-    "BIO": "🔖 Életrajz",
-    "YOUR_PROFILE": "Profilod"
+    "REPUTATION": "🎩 Reputation",
+    "REP_POINTS": "**{{points}}** point(s)",
+    "LEVEL": "📊 Level",
+    "EXP": "🔮 Experience",
+    "BIRTHDATE": "🎂 Birthdate",
+    "NO_BIRTHDATE": "No birthdate available",
+    "LOVER": "❤ Lover",
+    "REGISTERED": "📅 Registered",
+    "NO_LOVER": "Single",
+    "ACHIEVEMENTS": "🔥 Achievements",
+    "ACHIEVEMENTS_CONTENT": "Get more information with `{{prefix}}achievements`!",
+    "BIO": "🔖 Biography",
+    "YOUR_PROFILE": "Your profile",
+    "LOCATION": "🧭 Current Location",
+    "CURRENT_LOCATION": "You are currently at **{{location}}**"
 }
