--- a/languages/id-ID/economy/profile.json
+++ b/languages/id-ID/economy/profile.json
@@ -1,25 +1,27 @@
 {
-    "DESCRIPTION": "Menunjukan profil pengguna yang disebut atau profil penulis",
-    "USAGE": "{{prefix}}profile [pengguna]",
+    "DESCRIPTION": "Shows the mentioned user or author profile",
+    "USAGE": "{{prefix}}profile [user]",
     "EXAMPLES": "{{prefix}}profile Androz#2091",
-    "TITLE": "Profil {{username}}",
+    "TITLE": "{{username}}'s profile",
     "NO_BIO": "",
-    "BOT_USER": "Bot tidak punya halaman profil!",
-    "CASH": "💵 Tunai",
+    "BOT_USER": "Bots don't have profile page!",
+    "CASH": "💵 Cash",
     "BANK": "💳 Bank",
-    "NET_WORTH": "🌍 Total Uang",
+    "NET_WORTH": "🌍 Net Worth",
     "MONEY": "**{{cLogo}}{{money}}**",
-    "REPUTATION": "🎩 Reputasi",
-    "REP_POINTS": "**{{points}}** poin",
-    "LEVEL": "📊 Tingkatan",
-    "EXP": "🔮 Pengalaman",
-    "BIRTHDATE": "🎂 Tanggal lahir",
-    "NO_BIRTHDATE": "Tanggal lahir tidak tersedia",
-    "LOVER": "❤ Pasangan",
-    "REGISTERED": "📅 Terdaftar",
-    "NO_LOVER": "Jomblo",
-    "ACHIEVEMENTS": "🔥 Prestasi",
-    "ACHIEVEMENTS_CONTENT": "Dapatkan informasi lebih dengan `{{prefix}}achievements`!",
-    "BIO": "🔖 Biografi",
-    "YOUR_PROFILE": "Profilmu"
+    "REPUTATION": "🎩 Reputation",
+    "REP_POINTS": "**{{points}}** point(s)",
+    "LEVEL": "📊 Level",
+    "EXP": "🔮 Experience",
+    "BIRTHDATE": "🎂 Birthdate",
+    "NO_BIRTHDATE": "No birthdate available",
+    "LOVER": "❤ Lover",
+    "REGISTERED": "📅 Registered",
+    "NO_LOVER": "Single",
+    "ACHIEVEMENTS": "🔥 Achievements",
+    "ACHIEVEMENTS_CONTENT": "Get more information with `{{prefix}}achievements`!",
+    "BIO": "🔖 Biography",
+    "YOUR_PROFILE": "Your profile",
+    "LOCATION": "🧭 Current Location",
+    "CURRENT_LOCATION": "You are currently at **{{location}}**"
 }
