--- a/languages/ro-RO/economy/profile.json
+++ b/languages/ro-RO/economy/profile.json
@@ -21,5 +21,7 @@
     "ACHIEVEMENTS": "🔥 Achievements",
     "ACHIEVEMENTS_CONTENT": "Get more information with `{{prefix}}achievements`!",
     "BIO": "🔖 Biography",
-    "YOUR_PROFILE": "Your profile"
+    "YOUR_PROFILE": "Your profile",
+    "LOCATION": "🧭 Current Location",
+    "CURRENT_LOCATION": "You are currently at **{{location}}**"
 }
