--- a/languages/tr-TR/economy/profile.json
+++ b/languages/tr-TR/economy/profile.json
@@ -1,25 +1,27 @@
 {
-    "DESCRIPTION": "Kişisel profilini göster",
+    "DESCRIPTION": "Shows the mentioned user or author profile",
     "USAGE": "{{prefix}}profile [user]",
     "EXAMPLES": "{{prefix}}profile Androz#2091",
-    "TITLE": "{{username}}'in profili",
+    "TITLE": "{{username}}'s profile",
     "NO_BIO": "",
-    "BOT_USER": "Botları profilleri olamaz!",
-    "CASH": "💵 Para",
-    "BANK": "💳 Banka",
-    "NET_WORTH": "🌍 Net Değer",
+    "BOT_USER": "Bots don't have profile page!",
+    "CASH": "💵 Cash",
+    "BANK": "💳 Bank",
+    "NET_WORTH": "🌍 Net Worth",
     "MONEY": "**{{cLogo}}{{money}}**",
-    "REPUTATION": "🎩 Güven puanı",
-    "REP_POINTS": "**{{points}}** puan",
-    "LEVEL": "📊 Seviye",
-    "EXP": "🔮 Deneyim Puanı",
-    "BIRTHDATE": "🎂 Doğum Tarihi",
-    "NO_BIRTHDATE": "Doğum günü girilmedi",
-    "LOVER": "❤ Eşi",
-    "REGISTERED": "📅 Kayıt tarihi",
-    "NO_LOVER": "Bekar",
-    "ACHIEVEMENTS": "🔥 Başarımlar",
-    "ACHIEVEMENTS_CONTENT": "Daha fazla bilgi için `{{prefix}}achievements`!",
-    "BIO": "🔖 Biyografi",
-    "YOUR_PROFILE": "Senin profilin"
+    "REPUTATION": "🎩 Reputation",
+    "REP_POINTS": "**{{points}}** point(s)",
+    "LEVEL": "📊 Level",
+    "EXP": "🔮 Experience",
+    "BIRTHDATE": "🎂 Birthdate",
+    "NO_BIRTHDATE": "No birthdate available",
+    "LOVER": "❤ Lover",
+    "REGISTERED": "📅 Registered",
+    "NO_LOVER": "Single",
+    "ACHIEVEMENTS": "🔥 Achievements",
+    "ACHIEVEMENTS_CONTENT": "Get more information with `{{prefix}}achievements`!",
+    "BIO": "🔖 Biography",
+    "YOUR_PROFILE": "Your profile",
+    "LOCATION": "🧭 Current Location",
+    "CURRENT_LOCATION": "You are currently at **{{location}}**"
 }
